# ktool

./: .coveragerc  .gitignore  .legacy_setup.py  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  dev_coverage.sh  dev_install.sh  index.html  ktool_min.py  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-package.yml  tests.yml  todo.yml
EXTERNAL_LICENSES/: README.md
docs/: ktool.1  requirements.txt
docs/source/: conf.py  dyld.rst  generator.rst  headers.rst  index.rst  ktool.rst  macho.rst  modules.rst  objc.rst  quickstart.rst  structs.rst  util.rst
src/dyld/: binding.py  dyld.py  dylib.py  enums.py  library.py  structs.py  symtab.py
src/katlib/: __init__.py  kplistlib.py  log.py  structs.py
src/kdsc/: __init__.py  file.py  loader.py  shared_cache.py  structs.py
src/kdump/: headers.py  sdkbuilder.py
src/kimg4/: asn1.py  img4.py
src/kmacho/: __init__.py  base.py  binding.py  codesign.py  fixups.py  load_commands.py  mach_header.py  macho.py  structs.py
src/kswift/: __init__.py  demangle.py  structs.py
src/ktool/: __init__.py  codesign.py  dyld.py  exceptions.py  generator.py  headers.py  image.py  kcache.py  kplistlib.py  ktool.py  ktool_script.py  load_commands.py  loader.py  macho.py  objc.py  structs.py  swift.py  util.py  window.py
src/ktool_dsc/: __init__.py  file.py  loader.py  shared_cache.py  structs.py
src/ktool_macho/: __init__.py  base.py  binding.py  codesign.py  fixups.py  load_commands.py  mach_header.py  structs.py
src/ktool_swift/: __init__.py  demangle.py  structs.py
src/lib0cyn/: __init__.py  kplistlib.py  log.py  structs.py
src/macho/: _vm.py  binding.py  library.py  machofile.py  segment.py  slice.py  structs.py
src/objc/: ivar.py  method.py  objc_library.py  objcclass.py  property.py  protocol.py  structs.py  type.py
tests/: build.ninja  dyld_tests.py  kdump_tests.py  macho_tests.py  objc_tests.py  tests.py  unit.py
tests/bins/: Accord  Coherence.dyldex  Console  ExternalAccessory.dyldex  PreferencesUI  PreferencesUI.dyldex  Search  SoundAnalysis  ktrace.dyldex  rootless-init  testbin1  testbin1_fat
tests/src/: libSystem.tbd  testbin1.m  testent.xml  (+1 more)
(+1 files in other folders)
