[metadata]
name = k2l
version = 0.1.6
author = _kritanta
author_email = krit@krit.me
description = Static mach-o binary analysis tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kritantadev/ktool
project_urls =
    Bug Tracker = https://github.com/kritantadev/ktool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
scripts =
    bin/ktool
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
